# python-hse

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
docs/: pre-commit.md  pytest_setup.md
python_hse/tasks/homework1/: basic_calculator.py  integer_to_roman.py  longest_valid_parentheses.py  remove_k_digits.py  word_dictionary.py
python_hse/tasks/homework2/: combinations_phone_number.py  multiply_strings.py  reverse_words_in_string.py  simplify_path.py  word_break.py
python_hse/tasks/homework3/: median_two_arrays.py  merge_intervals.py  rotate_image.py  search_in_rotated_array.py  water_container.py
python_hse/tasks/homework4/: find_peak_element.py  first_missing_positive.py  plus_one.py  set_matrix_zeros.py  sort_colors.py
python_hse/tasks/homework5/: fraction_to_returning_decimanl.py  group_anagrams.py  majority_element.py  min_area.py  sort_chars_by_freq.py
tests/: test.py
tests/tasks/homework2/: test_combinations_phone_number.py  test_simplify_path.py  test_word_break.py
tests/tasks/homework3/: test_median_two_arrays.py  test_merge_intervals.py  test_water_container.py
tests/tasks/homework4/: test_find_peak_element.py  test_first_missing_positive.py  test_plus_one.py  test_sort_colors.py
