[tool.poetry]
name = "python-hse"
version = "0.1.0"
description = ""
authors = ["Dmitry Kuzmin <dskuzmin@edu.hse.ru>"]
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
